   res_pjsip_publish_asterisk for more information.

res_pjsip_publish_asterisk
------------------
 * A new module, res_pjsip_publish_asterisk adds support for PUBLISH requests of
   Asterisk information to other Asterisk servers. This module is intended only
   for Asterisk to Asterisk exchanges of information. Currently, this includes
   both mailbox state and device state information.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.4.0 to Asterisk 12.5.0 ------------
------------------------------------------------------------------------------

ARI
------------------
 * Stored recordings now support a new operation, copy. This will take an
   existing stored recording and copy it to a new location in the recordings
   directory.

 * LiveRecording objects now have three additional fields that can be reported
   in a RecordingFinished ARI event:
   - total_duration: the duration of the recording
   - talking_duration: optional. The duration of talking detected in the
     recording. This is only available if max_silence_seconds was specified
     when the recording was started.
   - silence_duration: optional. The duration of silence detected in the
     recording. This is only available if max_silence_seconds was specified
     when the recording was started.
   Note that all duration values are reported in seconds.

 * Users of ARI can now send and receive out of call text messages. Messages
   can be sent directly to a particular endpoint, or can be sent to the
   endpoints resource directly and inferred from the URI scheme. Text
   messages are passed to ARI clients as TextMessageReceived events. ARI
   clients can choose to receive text messages by subscribing to the particular
   endpoint technology or endpoints that they are interested in.

 * The applications resource now supports subscriptions to all endpoints of